huong dan su dung loading

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 Loading({
                     columns: 10, số cột hiện thị trên màn hình
                     loadingType: "random", hiện tại là "random", "topleft", "center", "center1","center2","center3","center4"
-                    loadingStyle: "opacity", hiện tại là "random", "zoomin", "bounce"
+                    loadingStyle: "opacity", hiện tại là "random", "zoom-in", "bounce"
                     delayTimingMin: 0.2, thời gian delay tới lúc bắt đầu hiệu ứng
                     delayTimingEachOther: 0.04, thời gian delay giữa các phần tử
                 });
@@ -139,7 +139,7 @@
         */
         Loading({
             loadingType: "topleft",
-            loadingStyle: "bounce"
+            loadingStyle: "zoom-in"
         });
         // 
         // $(window).on("load", () => {
