--- a/zAni/index.html
+++ b/zAni/index.html
@@ -12,9 +12,17 @@
 
 <body>
     <div id="root">
-        <p class="ani wave">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa fuga accusamus perspiciatis ullam.
-        </p>
+        <div>
+            <p class="ani wave" data-ani="wave-up">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, vel, libero explicabo?
+            </p>
+        </div>
+        <div>
+            <p class="ani wave" data-ani="wave-fall-down">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, vel, libero explicabo expedita aspernatur
+            </p>
+        </div>
+
         <p class="ani fade">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa fuga accusamus perspiciatis ullam.
         </p>
