--- a/BoardCard/index.html
+++ b/BoardCard/index.html
@@ -27,10 +27,13 @@
         <div class="card"></div>
         <span class="play-counter"></span>
     </div>
-    <p class="win-rate">0%</p>
+
     <p class="let-set-coin"></p>
     <p class="set-coin"></p>
-
+    <div class="flex">
+        <span class="block block-comp" data-block="1"></span>
+        <span class="block block-con" data-block="2"></span>
+    </div>
     <div class="flex">
         <span class="coin coin--10" data-coin="10"></span>
         <span class="coin coin--50" data-coin="50"></span>
@@ -39,9 +42,14 @@
         <span class="coin coin--5000" data-coin="5000"></span>
         <span class="coin allin" data-coin="all-in"></span>
     </div>
+    <div class="flex">
+        <button class="button del">Bỏ</button>
+        <button class="button replay">Chơi tiếp</button>
+    </div>
 
-    <button class="button del">Bỏ</button>
-    <button class="button replay">Chơi tiếp</button>
+    <p style="margin-top: 10px">check win nhà cái</p>
+
+    <div class="board-check"></div>
 
 
     <script src="../assets/js/jquery-3.4.1.js"></script>
