--- a/zAni/index.html
+++ b/zAni/index.html
@@ -13,36 +13,19 @@
 <body>
     <div id="root">
         <div>
-            <p class="ani wave" data-ani="wave-up">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, vel, libero explicabo?
-            </p>
-        </div>
-        <div>
-            <p class="ani wave" data-ani="wave-fall-down">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, vel, libero explicabo expedita aspernatur
+            <p class="ani wave wave-up" style="font-size: 40px;">
+                Lorem, ipsum dolor
             </p>
         </div>
 
-        <p class="ani fade">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa fuga accusamus perspiciatis ullam.
-        </p>
-        <p class="ani fade-in-left">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa fuga accusamus perspiciatis ullam.
-        </p>
-        <p class="ani fade-in-right">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa fuga accusamus perspiciatis ullam.
-        </p>
-        <p class="ani fade-in-top">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa fuga accusamus perspiciatis ullam.
-        </p>
 
-        <p class="ani zoom-in">
+        <!-- <p class="ani zoom-in">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa fuga accusamus perspiciatis ullam.
-        </p>
+        </p> -->
         <p class="ani zoom-out">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa fuga accusamus perspiciatis ullam.
+            <img src="../images/default/img_ahri_0.jpg" alt="">
         </p>
-        <p class="ani linebar">
+        <!-- <p class="ani linebar">
             <span class="ani-inside">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa fuga accusamus perspiciatis ullam.
             </span>
@@ -51,7 +34,7 @@
             <span class="ani-inside">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos culpa fuga accusamus perspiciatis ullam.
             </span>
-        </p>
+        </p> -->
 
         <script src="../assets/js/jquery-3.4.1.js"></script>
         <script src="../assets/plugins/anijs/ani.js"></script>
