--- a/BoardCard_3cao/index.html
+++ b/BoardCard_3cao/index.html
@@ -18,14 +18,16 @@
 
     <p class="total-coin"></p>
 
-    <div class="boardcard">
-        <div class="comp-card"></div>
-        <span class="comp-counter"></span>
-    </div>
+    <div class="flex">
+        <div class="boardcard">
+            <div class="comp-card"></div>
+            <span class="comp-counter"></span>
+        </div>
 
-    <div class="boardcard">
-        <div class="card"></div>
-        <span class="play-counter"></span>
+        <div class="boardcard">
+            <div class="card"></div>
+            <span class="play-counter"></span>
+        </div>
     </div>
 
     <p class="let-set-coin"></p>
@@ -47,7 +49,7 @@
         <button class="button replay">Chơi tiếp</button>
     </div>
 
-    <p style="margin-top: 10px">check win nhà cái</p>
+    <p>Win List</p>
 
     <div class="board-check"></div>
 
