--- a/BoardCard_latbai/index.html
+++ b/BoardCard_latbai/index.html
@@ -12,26 +12,30 @@
 </head>
 
 <body>
+    <div style="display: inline-block;margin-bottom: 20px;">
+        hiệu ứng chuột <span class="mouse-effect-checkbox"></span>
+    </div>
+
     <div id="root">
         <div class="game-mode">
-            <span class="mode none" data-mode=-1></span>
-            <span class="mode easy" data-mode=0></span>
+            <span class="mode easy active" data-mode=0></span>
             <span class="mode medium" data-mode=1></span>
             <span class="mode hard" data-mode=2></span>
             <span class="mode super-hard" data-mode=3></span>
             <span class="mode hell" data-mode=4></span>
         </div>
-        <div style="display: flex; max-width: 320px; margin-top: 40px;">
+        <div style="display: flex;margin-top: 40px;">
             <label class="gamescreen" for="game-screen">
                 <span class="span">
                     Game level:
                 </span>
-
                 <input type="number" id="game-screen" value="1">
-                <span class="min-screen">*min = 5<br />*max = 70</span>
             </label>
-            <button class="start-with"></button>
+
         </div>
+        <button class="start-with">
+            Start
+        </button>
 
         <span class="current-level"></span>
         <span class="click-counter">0</span>
@@ -43,6 +47,7 @@
             <span class="paper__item"></span>
         </div>
     </div>
+    <span class="circle-hover"></span>
     <script src="../assets/js/jquery-3.4.1.js"></script>
     <script src="./js/app.js"></script>
 </body>
