--- a/MenuToggler/index.html
+++ b/MenuToggler/index.html
@@ -7,9 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styled.css">
+    <link rel="shortcut icon" href="../images/default/fa_icon.svg" type="image/x-icon">
+
 </head>
 
 <body>
+    <header id="header">
+
+    </header>
     <div class="process-bar">
         <span class="process-line"></span>
         <span class="process-value"></span>
@@ -20,9 +25,20 @@
         <span></span>
     </button>
 
+    <button class="nav-toggler nav-toggler--02">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+
+    <button class="nav-toggler nav-toggler--03">
+        <span>MENU</span>
+        <span></span>
+    </button>
+
 
     <script src="../assets/js/jquery-3.4.1.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/index.js"></script>
     <script>
         const NavToggler = $(".nav-toggler");
         NavToggler.on("click", function () {
